# ai-coworker

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  coworker-blueprint.md  pyproject.toml
.claude/commands/: bug-hunt.md  bug-report.md  bug-sleuth.md  commit-code-review.md  commit-verify-plan.md  connect-slack.md  connect-telegram.md  design-d2pl.md  design-f2d.md  dev-feat-plan-to-code.md  dev-feat-quick-task.md  doc-merge-docs.md  gate-review.md  self-heal.md  self-init.md  self-patch.md  self-strain.md
.claude/hooks/: on-self-heal.sh
.cursor/rules/: commit-guardrails.md  connect-discord.md  design-c2d.md  (+13 more)
.gemini/: bug-hunt.md  commit-unit-tests.md  commit-verify-plan.md  connect-github.md  dev-ai-tool-report-issue.md  dev-execute.md  dev-feat-plan-to-code.md  dev-init.md  dev-pr.md  doc-merge.md  doc-review.md  gate-tests.md  mcp-slack.md  self-init.md
global/: coworker.yaml
setup/: install.sh  status_info.sh  uninstall.sh  update.sh
skills/: coworker-debug-issue-create.md  coworker-debug-issue-debug.md  coworker-design-c2f.md  coworker-design-f2d.md  coworker-design-p2f.md  coworker-do-code-conventions.md  coworker-do-code-review.md  coworker-do-guardrails.md  coworker-do-plan-to-code.md  coworker-do-verify-plan.md  coworker-init.md  coworker-meta-report-issue.md  coworker-meta-review-request.md  coworker-meta-self-healing-trace.md  coworker-meta-setup-coworker.md  coworker-meta-skill-create.md  coworker-meta-strain-sites.md  coworker-tool-discord.md  coworker-tool-slack.md
static/: dashboard.css  dashboard.js  index.html
(+177 files in other folders)
