[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coworker"
version = "0.1.0"
description = "Unified AI dev environment manager for Claude Code, Gemini CLI, and OpenCode"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
coworker = "coworker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
